[package]
name = "cfgseq"
version = "0.1.1"
authors = ["ibzieg <ian.b.zieg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portmidi = "^0.2"
docopt = "^1.1.0"
serde = { version = "^1.0.108", features = ["derive"] }
serde_yaml = "0.8"